--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -515,7 +515,7 @@ nav[role="admin"] .navbar-brand {
     width:10%;
 }
 
-.thumbnails {
+.thumbs {
     display: inline-flex;
 }
 
@@ -523,3 +523,6 @@ nav[role="admin"] .navbar-brand {
     border: none;
 }
 
+.orderDone {
+    background-color: #21ba45;
+}
