--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -261,8 +261,20 @@ ul {
 
 @media (min-width: 992px) {
     .productimg {
-        height: 250px;
+        max-height: 280px;
     }
+    @-moz-document url-prefix() {
+        .productimg{
+            min-height: 245px;
+        }
+
+    }
+    @supports (-webkit-appearance: none) {
+        .productimg  {
+            height: 240px;
+        }
+    }
+
 }
 
 @media only screen and (max-width:768px) {
